--- a/package.json
+++ b/package.json
@@ -58,5 +58,14 @@
   "main": "eslint.config.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+    "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "*.{css,scss,json,md,yml,yaml}": [
+      "prettier --write"
+    ]
+  }
 }
