--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "@chakra-ui/react": "^3.12.0",
     "@emotion/react": "^11.14.0",
     "@reduxjs/toolkit": "^2.6.1",
+    "apexcharts": "^5.3.6",
     "core-js": "^3.41.0",
     "framer-motion": "^12.5.0",
     "moment": "^2.30.1",
     "next-themes": "^0.4.5",
     "react": "^18.3.1",
+    "react-apexcharts": "^1.9.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-hot-toast": "^2.5.2",
